[package]
name = "metaboss"
version = "0.31.1"
edition = "2021"
description = "The Metaplex NFT-standard Swiss Army Knife tool."
repository = "https://github.com/samuelvanderwaal/metaboss"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
base64 = "0.13.1"
borsh = "0.10.3"
bs58 = "0.4.0"
chrono = "0.4.26"
console = "0.15.5"
env_logger = "0.9.3"
futures = "0.3.28"
glob = "0.3.1"
indexmap = { version = "1.9.3", features = ["serde"] }
indicatif = { version = "0.16.2", features = ["rayon"] }
jib = "0.4.1"
lazy_static = "1.4.0"
log = "0.4.17"
metaboss_lib = "0.16.0"
mpl-token-metadata = { version = "3.1.0", features = ["serde"] }
num_cpus = "1.15.0"
phf = { version = "0.10", features = ["macros"] }
ratelimit = "0.4.4"
rayon = "1.7.0"
reqwest = { version = "0.11.16", features = ["json"] }
retry = "1.3.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.8.26"
shellexpand = "2.1.2"
solana-client = "~1.16.14"
solana-account-decoder = "~1.16.14"
solana-logger = "~1.16.14"
solana-program = "~1.16.14"
solana-sdk = "~1.16.14"
spl-associated-token-account = "1.1.1"
spl-token = "3.5.0"
structopt = "0.3.26"
thiserror = "1.0.40"
tokio = "1.14.1"
regex = "1.8.3"
once_cell = "1.18.0"

[features]

[dev-dependencies]
regex = "1.8.3"
